# LuckyD-Code

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Install and Run - Mac.command  Install and Run - Windows.bat  Install and Run Web UI - Mac.command  Install and Run Web UI - Windows.bat  LICENSE  LuckyD Code.bat  MANIFEST.in  Makefile  README.md  RUN-COVERAGE.bat  SECURITY.md  TODO.md  _del_nul.py  ceiling_run.txt  cov_out.txt  game_source.py  gitpush.bat  luckyD.bat  main.py  pyproject.toml  requirements.txt  resize_terminal.bat
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  publish.yml
.testvenv/: pyvenv.cfg
.testvenv/Scripts/: Activate.ps1  activate  activate.bat
docs/: ARCHITECTURE.md  PLUGINS.md  SKILLS.md  contributing.md
examples/: README.md  game_source.py  git_automation.py  parallel_code_review.py  web_scraper.py
examples/plugins/: hello_world.py  json_formatter.py  word_counter.py
installers/: Install and Run - Linux.sh  Install and Run - Mac.command  Install and Run - Windows.bat  resize_terminal.command
launchers/: Install and Run Web UI - Linux.sh  Install and Run Web UI - Windows.bat  resize_terminal.py
luckyd_code/: __init__.py  __main__.py  _agent_loop.py  _data_dir.py  agent.py  api.py  audit_daemon.py  autonomous_fixer.py  background.py  backup.py  cli.py  cli_entry.py  cli_utils.py  config.py  context.py  cost_tracker.py  dream.py  error_reporter.py  exceptions.py  export.py  feedback_analyzer.py  file_watcher.py  hooks.py  indexer.py  init.py  keybindings.py  log.py  model_registry.py  orchestrator.py  plan_gate.py  planner.py  plugins.py  retry.py  router.py  sandbox.py  self_critique.py  self_improve.py  sessions.py  settings.py  subagents.py  (+6 more)
luckyd_code/analytics/: __init__.py  reporter.py  scanner.py  smells.py  trends.py
luckyd_code/brain/: __init__.py  assembler.py  chunker.py  constants.py  embedder.py  graph.py  indexer.py  parser.py  retriever.py
luckyd_code/cli_commands/: __init__.py  audit.py  background.py  brain.py  budget.py  config.py  dispatcher.py  effort.py  plugins.py  sessions.py
luckyd_code/git/: __init__.py  auto_commit.py  tools.py
luckyd_code/mcp/: __init__.py  client.py
luckyd_code/memory/: __init__.py  manager.py  user.py
luckyd_code/metrics/: __init__.py
luckyd_code/permissions/: __init__.py  manager.py
luckyd_code/skills/: __init__.py  review.py  security.py
luckyd_code/tasks/: __init__.py  manager.py
luckyd_code/templates/: index.html  manifest.json  sw.js
luckyd_code/templates/src/: app.js  body.html  cdn.txt  style.css
luckyd_code/tools/: __init__.py  agent_tools.py  bash.py  brain_tools.py  browser.py  datetime_tool.py  dockerfile_gen.py  file_ops.py  game_gen.py  git_tools.py  git_worktree.py  image.py  path_validate.py  project_gen.py  readme_gen.py  registry.py  shell_detect.py  web.py  youtube.py
luckyd_code/web_routes/: __init__.py  background.py  brain.py  cost.py  files.py  memories.py  misc.py  project.py  review.py  sessions.py  settings.py  static.py  update.py  ws.py
luckyd_code_data/: settings.json
projects/: urls.txt  yt_playlist_validator.py  yt_playlist_validator.py.bak
scripts/: build_html.py  ci_autofix.py  git_cleanup.bat  install_scheduled_task.ps1  playlist_gen.py  resize_terminal.sh  run_audit_once.py
tests/: __init__.py  conftest.py  test_agent_loop.py  test_agent_loop_and_api.py  test_analytics.py  test_api.py  test_api_streaming.py  test_audit_daemon.py  test_auto_commit.py  test_autonomous_fixer.py  test_background.py  test_backup.py  test_bash_tool.py  test_brain.py  test_brain_indexer.py  test_brain_rebuild.py  test_browser_tool.py  test_ceiling.py  test_chunker.py  test_cli_smoke.py  test_config.py  test_config_coverage.py  test_context.py  test_cost_tracker.py  test_cost_tracker_coverage.py  test_coverage_100.py  test_coverage_boost.py  test_coverage_boost2.py  test_coverage_final_push.py  test_coverage_gaps_1.py  test_coverage_gaps_2.py  test_coverage_gaps_3.py  test_coverage_gaps_final.py  test_coverage_newmodules.py  test_coverage_push3.py  test_coverage_push4.py  test_coverage_push5.py  test_coverage_push6.py  test_data_dir.py  test_dockerfile_gen.py  (+62 more)
