[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luckyd-code"
version = "1.3.3"
description = "LuckyD Code — AI coding assistant powered by DeepSeek"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.10"
keywords = ["ai", "coding", "assistant", "luckyd", "cli"]
authors = [
    { name = "Dylan Kaye", email = "dylanchess0320@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "nest_asyncio>=1.5.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
rag = ["sentence-transformers>=2.2.0", "numpy>=1.24.0"]
rag-full = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    "watchdog>=3.0.0",
]
browser = [
    "playwright>=1.40.0",
]
game = [
    "pygame>=2.5.0",
]
dev = [
    "pre-commit>=3.0",
    "detect-secrets>=1.4",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "types-PyYAML",
    "types-aiofiles",
    "types-beautifulsoup4",
    "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/Dylanchess0320/LuckyD-Code"
BugTracker = "https://github.com/Dylanchess0320/LuckyD-Code/issues"

[project.scripts]
luckyd-code = "luckyd_code.cli_entry:main"
ldc = "luckyd_code.cli_entry:main"

[tool.hatch.build.targets.wheel]
packages = ["luckyd_code"]

[tool.hatch.build]
include = [
    "luckyd_code/**",
    "luckyd_code/templates/**",
    "luckyd_code/templates/src/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "/luckyd_code",
    "/tests",
    "/scripts",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/MANIFEST.in",
    "/README.md",
    "/pyproject.toml",
    "/requirements.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=luckyd_code --cov-report=term-missing --cov-fail-under=97"
asyncio_mode = "strict"

[tool.coverage.run]
source = ["luckyd_code"]
omit = [
    # Interactive CLI — requires a live terminal, not unit-testable
    "luckyd_code/__main__.py",
    "luckyd_code/cli.py",
    "luckyd_code/cli_entry.py",
    "luckyd_code/cli_utils.py",
    "luckyd_code/cli_commands/dispatcher.py",
    "luckyd_code/cli_commands/audit.py",
    "luckyd_code/cli_commands/background.py",
    "luckyd_code/cli_commands/brain.py",
    "luckyd_code/cli_commands/budget.py",
    "luckyd_code/cli_commands/config.py",
    "luckyd_code/cli_commands/effort.py",
    "luckyd_code/cli_commands/plugins.py",
    # Browser automation — requires a real Playwright browser process
    "luckyd_code/tools/browser.py",
    # External protocol clients — require live services to be meaningful
    "luckyd_code/mcp/client.py",
    # Long-running OS daemon — not unit-testable without OS scheduler
    "luckyd_code/audit_daemon.py",
    # Thin bridge / glue — no logic of its own
    "luckyd_code/tools_bridge.py",
    "luckyd_code/permissions/manager.py",
    # Embedding model — requires sentence-transformers installed (optional dep)
    "luckyd_code/brain/embedder.py",
    # Removed module — kept as empty tombstone until git rm is run
    "luckyd_code/self_critique.py",
]

[tool.coverage.report]
fail_under = 97
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.10"
# Strict mode is enabled selectively below — turning on all strict flags at
# once would require fixing hundreds of existing annotations. The approach
# here is to enable the highest-value checks now and work toward full strict
# incrementally (tracked in TODO.md).
strict = false
# --- High-value checks enabled now ---
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true          # catch stale # type: ignore comments
no_implicit_reexport = true         # explicit __all__ required for public API
disallow_any_generics = true        # List, Dict → List[str], Dict[str, int]
disallow_subclassing_any = true     # don't subclass untyped third-party classes
disallow_untyped_decorators = true  # decorators must be typed
check_untyped_defs = true           # check bodies of unannotated functions
disallow_untyped_defs = true        # all function defs must have type annotations
ignore_missing_imports = true       # third-party stubs not always available
implicit_optional = true            # foo: str = None → foo: Optional[str]
disable_error_code = ["override"]   # wait until all overrides are typed
exclude = [
    "tests/",
    "__pycache__/",
    ".venv/",
    # CLI entry-points — imperative scripts; full typing deferred
    "luckyd_code/cli\\.py",
    "luckyd_code/cli_entry\\.py",
    "luckyd_code/cli_utils\\.py",
    "luckyd_code/cli_commands/",
    # Optional extras that require heavy third-party stubs
    "luckyd_code/tools/browser\\.py",
    # ── Modules not yet fully annotated (incremental — remove as each is cleaned) ──
    # Core runtime  (_agent_loop.py, context.py, orchestrator.py fully typed — removed 2026-05-17)
    "luckyd_code/api\\.py",
    "luckyd_code/background\\.py",
    "luckyd_code/plugins\\.py",
    "luckyd_code/sandbox\\.py",
    "luckyd_code/subagents\\.py",
    "luckyd_code/web_app\\.py",
    "luckyd_code/__init__\\.py",
    "luckyd_code/__main__\\.py",
    # Feature modules
    "luckyd_code/audit_daemon\\.py",
    "luckyd_code/autonomous_fixer\\.py",
    "luckyd_code/error_reporter\\.py",
    "luckyd_code/file_watcher\\.py",
    "luckyd_code/indexer\\.py",
    # init.py, themes.py, update.py, keybindings.py, undo.py, settings.py,
    # plan_gate.py, planner.py, verify.py — fully typed; removed 2026-05-17
    # backup.py, export.py, hooks.py, self_improve.py — fully typed; removed 2026-05-17
    # Subsystems (whole directories)
    "luckyd_code/analytics/",
    "luckyd_code/brain/",
    "luckyd_code/git/",
    "luckyd_code/mcp/",
    "luckyd_code/memory/",
    "luckyd_code/metrics/",
    "luckyd_code/permissions/",
    "luckyd_code/tasks/",
    "luckyd_code/tools/",
    "luckyd_code/web_routes/",
]

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D100", "D104", "D105", "D107"]
match = "(?!test_|conftest).*\.py"
match-dir = "luckyd_code"
# CLI entry-points and optional-dep modules are excluded from docstring checks
# for the same reasons they are excluded from mypy.
add-select = ["D417"]
